Fix transition overflow, remove Github from wizard text

--- a/src/styles/globals/_animations.scss
+++ b/src/styles/globals/_animations.scss
@@ -22,8 +22,8 @@
 }
 
 // Prevent swipe animation from causing horizontal scroll
-body.is-animating {
-  overflow-x: hidden;
+html.is-animating body {
+  overflow: hidden;
 }
 
 // Animate prev in from left
